# wowbot

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.vcpkg/triplets/: x64-windows.cmake
cmake/vcpkg/: Include.cmake
wow_client/: CMakeLists.txt  main.cpp
wow_client/client/: GameClient.cpp  GameClient.hpp
wow_client/client/auth/: AuthSession.cpp  AuthSession.hpp
wow_client/client/game/: GameSession.cpp  GameSession.hpp
wow_client/client/packets/: Packets.hpp
wow_client/client/states/: State.hpp  StateMachine.hpp
wow_client/crypto/: Arc4.cpp  Arc4.hpp  BigNumber.cpp  BigNumber.hpp  HmacHash.cpp  HmacHash.hpp  Sha1.cpp  Sha1.hpp
wow_client/networking/: ByteBuffer.hpp  Socket.hpp
